--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .button {
+    @apply hover:shadow-lg rounded-full border-gray-200 border px-2 py-1 transition transform duration-100 ease-out cursor-pointer active:scale-95 active:bg-gray-100;
+  }
+}
